ShenandoahGC tuning mode